rename to app remove unused

--- a/Sandbox/sfml_test.vcxproj
+++ b/Sandbox/sfml_test.vcxproj
@@ -161,7 +161,7 @@
     <ClCompile Include="libs\imgui\imgui.cpp" />
     <ClCompile Include="libs\imgui\imgui_draw.cpp" />
     <ClCompile Include="libs\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="sfml_test.cpp" />
+    <ClCompile Include="app.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dice.hpp" />
