better bloom modulator

--- a/Sandbox/sfml_test.vcxproj
+++ b/Sandbox/sfml_test.vcxproj
@@ -153,6 +153,7 @@
       <Optimization>MinSpace</Optimization>
       <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
